# cryptocomrade

./: README.md
go/: go.mod  go.sum  hash.go  hash_test.go  secretbox.go  secretbox_test.go
go/csidh/: csidh_test.go
go/hash/: hash.go  hash_test.go
go/kyber/: kyber_test.go
go/noise/: kyberXX_test.go  noiseXX_test.go
go/noise_echo_client/: main.go
go/secretbox/: secretbox.go  secretbox_test.go
go/sidh/: sidh_test.go
go/x448/: x448_test.go
rust/: Cargo.toml
rust/noise_echo_server/: Cargo.toml
rust/noise_echo_server/src/: main.rs
rust/src/: classicmceliece.rs  kyber.rs  lib.rs  noise.rs  sikes.rs
