[package]
name = "rust"
version = "0.0.0"
authors = ["David Stainton <dstainton415@gmail.com>"]

[dependencies]
subtle = "2.4.0"
rustc-serialize = "0.3"
snow = { version = "0.7.2", features = ["hfs", "pqclean_kyber1024"] }
ecdh_wrapper = "0.0.9"
rand = "^0.4.2"
#pqcrypto-classicmceliece = "0.1.1"
rust-sike = "0.2.0"
oqs = "0.3.0"

